完成爬虫工具的编写

--- a/src/main/resources/mybatis-plus.properties
+++ b/src/main/resources/mybatis-plus.properties
@@ -1,7 +1,7 @@
-parent.package=com.es.demo
-parent.dir=com/es/demo/
-model.name=student
-table.name=student
-database.name=just
+parent.package=yuqiao.housesearch
+parent.dir=yuqiao/housesearch
+model.name=house
+table.name=house
+database.name=house-search
 username=root
 password=935377012
