--- a/src/main/resources/mybatis-plus.properties
+++ b/src/main/resources/mybatis-plus.properties
@@ -1,7 +1,7 @@
 parent.package=yuqiao.housesearch
 parent.dir=yuqiao/housesearch
-model.name=house
-table.name=house
+model.name=user
+table.name=user
 database.name=house-search
 username=root
 password=935377012
