--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,11 +8,9 @@ elasticsearch:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/house-search
+    url: jdbc:mysql://localhost:3306/house-search?characterEncoding=utf8&useSSL=true&serverTimezone=UTC
     username: root
     password: 935377012
     driver-class-name: com.mysql.jdbc.Driver
   elasticsearch:
     jest.uris: http://127.0.0.1:9200
-
-
