--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,12 @@
-elasticsearch:
-  ip: 127.0.0.1
-  port: 9300
-  pool: 5
-  cluster:
-    name: pxc
-
-
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/house-search?characterEncoding=utf8&useSSL=true&serverTimezone=UTC
     username: root
     password: 935377012
     driver-class-name: com.mysql.jdbc.Driver
-  elasticsearch:
-    jest.uris: http://127.0.0.1:9200
+  data:
+    elasticsearch:
+      repositories:
+        enabled: true
+      cluster-name: yuqiao
+      cluster-nodes: 132.232.75.97:9300
