前端界面，mybatis-plus分页

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,5 @@ spring:
 qq:
   appid: 101512317
   appkey: b8a753e58978a50d269120ba163b9047
+mybatis:
+  mapper-locations: classpath:yuqiao/housesearch/mapper/**.xml
